# makedot

./: Cargo.toml  mkdb.pest
.flox/: env.json
.flox/env/: manifest.toml
src/: dot.rs  graph.rs  main.rs  make.bash  parser.rs
