# Cargo.toml
[package]
name = "makedot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
pest = "2.5"
pest_derive = "2.5"
petgraph = "0.7"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"
